replace: icon font

--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -38,9 +38,9 @@ $font-family-monospace:   Consolas, "Liberation Mono", Menlo, Courier, monospace
 $font-weight-base:        normal;
 
 $font-size-base:          $base-size;
-$font-size-lg:            106.25%;
-$font-size-sm:            93.75%;
-$font-size-xs:            87.5%;
+$font-size-lg:            1.0625rem;
+$font-size-sm:            .9375rem;
+$font-size-xs:            .875rem;
 
 $line-height-base:        2rem;
 
