--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -72,7 +72,7 @@ $entry-thumbnail-size: 5rem;  // 80px;
   border: 1px solid $grey-200;
   overflow: hidden;
 
-  .material-icons {
+  .icon-image {
     color: $grey-400;
     font-size: 2rem;
     @include size(2rem);
