--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -24,3 +24,111 @@
        local('Segoe UI Symbol'),
        local('Noto Sans Symbols');
 }
+
+// icon font
+@font-face {
+  font-family: 'icon';
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/icon.ttf') format('truetype'),
+       url('../fonts/icon.woff') format('woff'),
+       url('../fonts/icon.svg#icon') format('svg');
+}
+
+.icon-chevron_left,
+.icon-chevron_right,
+.icon-edit,
+.icon-first_page,
+.icon-folder,
+.icon-home,
+.icon-image,
+.icon-keyboard_arrow_right,
+.icon-last_page,
+.icon-location_on,
+.icon-menu,
+.icon-open_in_new,
+.icon-search,
+.icon-update {
+  color: inherit;
+  font-family: 'icon';
+  font-size: inherit;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: middle;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  font-feature-settings: 'liga';
+}
+
+.icon-chevron_left {
+  &::before {
+    content: "\e900";
+  }
+}
+.icon-chevron_right {
+  &::before {
+    content: "\e901";
+  }
+}
+.icon-edit {
+  &::before {
+    content: "\e902";
+  }
+}
+.icon-first_page {
+  &::before {
+    content: "\e903";
+  }
+}
+.icon-folder {
+  &::before {
+    content: "\e904";
+  }
+}
+.icon-home {
+  &::before {
+    content: "\e905";
+  }
+}
+.icon-image {
+  &::before {
+    content: "\e906";
+  }
+}
+.icon-keyboard_arrow_right {
+  &::before {
+    content: "\e907";
+  }
+}
+.icon-last_page {
+  &::before {
+    content: "\e908";
+  }
+}
+.icon-location_on {
+  &::before {
+    content: "\e909";
+  }
+}
+.icon-menu {
+  &::before {
+    content: "\e90a";
+  }
+}
+.icon-open_in_new {
+  &::before {
+    content: "\e90b";
+  }
+}
+.icon-search {
+  &::before {
+    content: "\e90c";
+  }
+}
+.icon-update {
+  &::before {
+    content: "\e90d";
+  }
+}
