--- a/assets/styles/parts/_breadcrumb.scss
+++ b/assets/styles/parts/_breadcrumb.scss
@@ -12,35 +12,29 @@
   ol {
     padding: 0;
     color: $grey-400;
-    font-size: $font-size-sm;
+    font-size: 0;
     list-style: none;
   }
 
   li {
     display: inline-block;
+    font-size: $font-size-sm;
+    line-height: 1;
 
     &:first-child::before {
-      @extend .material-icons;
-      content: 'home';
+      @extend .icon-home;
     }
 
     & + li {
       margin-left: .25rem;
       &::before {
-        @extend .material-icons;
-        content: 'keyboard_arrow_right';
+        @extend .icon-keyboard_arrow_right;
       }
     }
   }
 
   .breadcrumb-active {
     color: $grey-600;
-
-    &::before {
-      @extend .material-icons;
-      width: 2rem;
-      content: 'keyboard_arrow_right' + 'location_on';
-    }
   }
 
 }
