--- a/assets/styles/parts/_entry-meta.scss
+++ b/assets/styles/parts/_entry-meta.scss
@@ -12,14 +12,14 @@
     padding-left: 0;
     font-size: 0;
     list-style: none;
-    vertical-align: middle;
   }
 
   li {
-    display: inline-block;
+    display: inline-flex;
     margin-bottom: 0;
     font-size: $font-size-sm;
     line-height: 1;
+    vertical-align: middle;
 
     & + li::before {
       @extend .icon-keyboard_arrow_right;
@@ -46,6 +46,7 @@
   margin-bottom: 1rem;
 
   ul {
+    display: flex;
     padding-left: 0;
     font-size: $font-size-xs;
     line-height: 2rem;
@@ -53,9 +54,7 @@
   }
 
   li {
-    display: inline-block;
-    margin-right: .5rem;
-    margin-bottom: .5rem;
+    margin: 0 .5rem .5rem 0;
     &:last-child {
       margin-right: 0;
     }
