--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -49,11 +49,15 @@
 .icon-open_in_new,
 .icon-search,
 .icon-update {
+  width: 1rem;
+  height: 1rem;
   color: inherit;
   font-family: 'icon';
   font-size: inherit;
   font-style: normal;
   font-variant: normal;
+  font-weight: normal;
+  text-align: center;
   text-rendering: optimizeLegibility;
   text-transform: none;
   vertical-align: middle;
