--- a/assets/styles/parts/_mokuji.scss
+++ b/assets/styles/parts/_mokuji.scss
@@ -1,41 +1,24 @@
 .mokuji-container {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin: 2rem 0;
+  padding: .25rem 1.5rem;
+  border-left: 3px solid $blue-100;
 }
 
 .mokuji-title {
-  display: table-cell;
-  width: 30%;
-  padding-right: 3rem;
-  font-size: $font-size-h3;
-  font-weight: normal;
-  white-space: nowrap;
-
-  @media screen and (max-width: $screen-xs) {
-    display: table-caption;
-    width: 100%;
-    margin-bottom: 1rem;
-    padding-right: auto;
-  }
+  display: block;
+  margin-bottom: .5rem;
+  color: $font-color-h2;
+  font-size: 1.25rem;
 }
 
 .mokuji-content {
-  display: table-cell;
-  padding-left: 1rem;
-  border-left: 2px solid $blue-100;
-
   ol {
     margin-bottom: 0;
+    padding-left: 0;
     ol {
       margin-bottom: .5rem;
       padding-left: 1rem;
       list-style-type: decimal;
     }
   }
-
-}
-
-.mokuji_number {
-  padding-right: .5rem;
-  color: $grey-700;
 }
