fix: リネームとリファクタ

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -38,7 +38,7 @@ $output-bourbon-deprecation-warnings: false;
 @import "parts/sandbox";
 @import "parts/entry-meta";
 @import "parts/entry-share";
-@import "parts/entry-similar";
+@import "parts/entry-related";
 @import "parts/search";
 
 // layouts
