--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -2,6 +2,7 @@
 // for header's position:fixed
 .main-container {
   flex: 1;
+  margin-bottom: 1rem;
   padding-top: $header-nav-height + 1rem;  // for header
 
   @include mobile {
