fix: フォントサイズ変更

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -2,6 +2,7 @@
   padding: 2rem 0;
   background: $grey-300;
   color: $grey-600;
+  font-size: $font-size-sm;
 
   .container {
     display: flex;
