add: progress bar追加

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -52,3 +52,4 @@ $output-bourbon-deprecation-warnings: false;
 @import "vendor/prism-line-numbers";
 @import "vendor/prism-command-line";
 @import "vendor/headroomjs";
+@import "vendor/ngprogress";
