fix: AmazonProductのデザイン修正

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -28,7 +28,7 @@ $output-bourbon-deprecation-warnings: false;
 
 // parts
 @import "parts/wp-classes";
-@import "parts/amazon";
+@import "parts/amazon-product";
 @import "parts/pager";
 @import "parts/pagination";
 @import "parts/breadcrumb";
