--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -35,6 +35,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  height: 100%;
   min-height: 100vh;
   margin: 0;
   background: $white;
