--- a/assets/styles/parts/_mokuji.scss
+++ b/assets/styles/parts/_mokuji.scss
@@ -15,6 +15,7 @@
   ol {
     margin-bottom: 0;
     padding-left: 0;
+    list-style-position: inside;
     ol {
       margin-bottom: .5rem;
       padding-left: 1rem;
