add: Text Domain

--- a/style.css
+++ b/style.css
@@ -8,4 +8,6 @@ Author URI:         http://b.0218.jp/
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
+
+Text Domain:        kiku
 */
