--- a/assets/styles/parts/_entry-related.scss
+++ b/assets/styles/parts/_entry-related.scss
@@ -1,29 +1,36 @@
+.related {
+  height: 15.5rem;
+  margin-bottom: 1rem;
+  padding: 0 1rem;
+}
+
 .entry-related {
   display: flex;
-  margin-bottom: 1rem;
-  font-size: $font-size-sm;
   overflow-x: scroll;
 
   a {
     display: block;
     width: 20rem;
     height: calc(20rem / 1.618);
-    padding: .5rem 1rem;
+    padding: .5rem 0;
     overflow: hidden;
-    &:hover {
-      background: $grey-100;
-    }
   }
 
 }
 
 .related-heading {
+  margin-top: 0;
   font-size: $font-size-h4;
 }
 
-.related-container {
+.related-section {
+  &:hover {
+    .related-title {
+      color: $blue-300;
+    }
+  }
   & + & {
-    margin-left: 1rem;
+    margin-left: 2rem;
   }
 }
 
@@ -31,6 +38,7 @@
   display: block;
   max-width: 100%;
   margin-bottom: .5rem;
+  transition: color .3s $animation-curve-fast-out-slow-in;
   color: $grey-800;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -40,7 +48,7 @@
 
 .related-description {
   color: $grey-500;
-  font-size: $font-size-sm;
+  font-size: $font-size-xs;
   overflow: hidden;
   word-break: break-all;
 }
