fix: amazon productの高さ固定

--- a/assets/styles/parts/_amazon-product.scss
+++ b/assets/styles/parts/_amazon-product.scss
@@ -1,6 +1,7 @@
 // amazon product
 .amazon-product {
   position: relative;
+  height: 14rem;
   margin: 1rem 0;
   padding: 1rem;
   background-repeat: no-repeat;
