fix: pager間の間隔調整

--- a/assets/styles/parts/_pager.scss
+++ b/assets/styles/parts/_pager.scss
@@ -20,6 +20,7 @@
   }
 
   .pager-prev {
+    padding-right: 1rem;
     text-align: left;
     .pager-icon {
       margin-right: .5rem;
@@ -30,6 +31,7 @@
   }
 
   .pager-next {
+    padding-left: 1rem;
     text-align: right;
     .pager-icon {
       margin-left: .5rem;
