add: font-display

--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -30,6 +30,7 @@
   font-family: 'icon';
   font-style: normal;
   font-weight: normal;
+  font-display: swap;
   src: url('../fonts/icon.ttf') format('truetype'),
        url('../fonts/icon.woff') format('woff'),
        url('../fonts/icon.svg#icon') format('svg');
