--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -21,6 +21,7 @@ html {
   font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 
   @media screen and (max-width: $screen-sm) {
     font-size: 93.75%;
