add: table用スクロールラッパーを追加

--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -77,7 +77,7 @@ $link-border-color:     $blue-100;
 
 $table-background-color: $grey-100;
 $table-border-color:     $grey-200;
-$table-hover-color:      $grey-50;
+$table-hover-color:      $blue-50;
 
 $font-color-h1:         $grey-900;
 $font-color-h2:         $grey-800;
