--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   align-items: center;
   height: $header-nav-height;
-  background: $white;
+  background: #fff;
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .25);
   z-index: 10;
 
