--- a/assets/styles/parts/_search.scss
+++ b/assets/styles/parts/_search.scss
@@ -22,6 +22,7 @@
   border: 0;
   border-radius: 0;
   outline: none;
+  background: transparent;
   color: $grey-800;
   box-shadow: none;
   -webkit-appearance: none;
