--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -75,9 +75,9 @@ $link-hover-color:      $blue-A400;
 $link-visit-color:      $light-blue-A100;
 $link-border-color:     $blue-100;
 
-$table-background-color: $grey-100;
+$table-head-bg-color:    $grey-100;
 $table-border-color:     $grey-200;
-$table-hover-color:      $blue-50;
+$table-hover-color:      lighten($blue-50, 5%);
 
 $font-color-h1:         $grey-900;
 $font-color-h2:         $grey-800;
