--- a/assets/styles/parts/_drawer.scss
+++ b/assets/styles/parts/_drawer.scss
@@ -52,7 +52,7 @@
   max-height: 100%;
   transform: translate(-100%, 0) translate3d(-100%, 0, 0);
   transition: transform .5s ease, opacity .5s ease;
-  background: $white;
+  background: #fff;
   opacity: 0;
   z-index: 25;
 }
