fix: sandboxのレイアウト

--- a/assets/styles/parts/_sandbox.scss
+++ b/assets/styles/parts/_sandbox.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding: 2rem;
   border: .15rem solid $grey-100; // same: pre bgColor
+  background: #fff;
 
   // proximity
   & + pre {
