--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -50,5 +50,6 @@ $output-bourbon-deprecation-warnings: false;
 @import "vendor/prismjs";
 @import "vendor/prism-line-numbers";
 @import "vendor/prism-command-line";
+@import "vendor/prism-show-language";
 @import "vendor/headroomjs";
 @import "vendor/ngprogress";
