--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,6 +5,7 @@ $output-bourbon-deprecation-warnings: false;
 // config
 @import "config/colors";
 @import "config/variables";
+@import "config/mixins";
 
 // grid framework: bulma
 @import "vendor/bulma";
