--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -8,7 +8,12 @@
   display: none !important;
 }
 
-@include selection {
+::selection {
+  background: $grey-300;
+  color: $grey-900;
+}
+
+::-moz-selection {
   background: $grey-300;
   color: $grey-900;
 }
