--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -1,4 +1,14 @@
 //
+// Responsiveness
+// -------------------------
+
+$tablet: 769px;
+$desktop: 960px;
+$widescreen: 1152px;
+$fullhd: $widescreen;//1344px;
+
+
+//
 // Font
 // -------------------------
 
