--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -88,6 +88,7 @@ img {
 
 // Tables
 table {
+  margin: 0 auto;
   border: $table-border-width solid $table-border-color;
   background: #fff;
   border-collapse: collapse;
