fix: padding to margin

--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -2,5 +2,5 @@
 // for header's position:fixed
 .main-container {
   flex: 1 0 auto;
-  padding-top: $header-nav-height + 1rem;  // for header
+  margin-top: $header-nav-height + 1rem;  // for header
 }
