--- a/assets/styles/parts/_entry-related.scss
+++ b/assets/styles/parts/_entry-related.scss
@@ -1,4 +1,5 @@
 .related {
+  height: 18rem;
   margin-bottom: 1rem;
 }
 
@@ -13,7 +14,6 @@
   a {
     display: block;
     width: 15rem;
-    padding: .5rem 0;
     overflow: hidden;
   }
 
@@ -21,7 +21,7 @@
 
 .related-heading {
   margin-top: 0;
-  font-size: $font-size-h4;
+  font-size: $font-size-h3;
 }
 
 .related-section {
