--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -1,14 +1,15 @@
 // YuGothic font
 @font-face {
   font-family: "YuGoMedium";
-  font-weight: normal;
+  font-weight: 400;
   src: local("YuGothic-Medium"),
-       local("Yu Gothic Medium");
+       local("Yu Gothic Medium"),
+       local("YuGothic-Regular");
 }
 
 @font-face {
   font-family: "YuGoMedium";
-  font-weight: bold;
+  font-weight: 600;
   src: local("YuGothic-Bold"),
        local("Yu Gothic");
 }
