--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -58,6 +58,7 @@ $entry-thumbnail-size: 5rem;  // 80px;
     &-title {
       transition: color .3s $animation-curve-fast-out-slow-in;
       font-size: $font-size-h3;
+      font-weight: normal;
     }
 
     &-summary {
