--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -9,7 +9,7 @@
     margin: 0 0 .5rem;
     font-size: $font-size-h2;
     font-weight: normal;
-    line-height: 3rem;
+    line-height: ($font-size-h2 * 2);
     word-wrap: break-word;
   }
 
@@ -52,77 +52,8 @@
     user-select: none;
   }
 
-  > p,
-  > pre,
-  > blockquote,
-  > ul,
-  > ol,
-  > dl,
-  > table,
-  figure,
-  > img,
-  > div {
-    margin-bottom: 2rem;
-  }
-
-  *:not(pre) > code {
-    margin: 0;
-    padding: .2rem 0;
-    border-radius: .15rem;
-    background: $blue-50;
-    color: $blue-400;
-    font-size: $font-size-sm;
-    line-height: 2;
-
-    &::before,
-    &::after {
-      letter-spacing: -.2rem;
-      content: "\00a0";
-    }
-  }
-
   li + li {
     margin-top: .25rem;
-  }
-
-  > blockquote {
-    margin-left: .8em;
-    padding: 1.6rem;
-    border-left: 4px solid $grey-200;
-    color: $grey-500;
-
-    p:first-child {
-      margin-top: 0;
-    }
-    p:last-child {
-      margin-bottom: 0;
-    }
-
-    small,
-    footer {
-      display: block;
-      margin-top: 1.8rem !important;
-      font-size: $font-size-sm;
-      text-align: right;
-    }
-  }
-
-  > pre {
-    padding: 2rem;
-    border-radius: ($spacer * .15);
-    background: $grey-100;
-
-    &.line-numbers {
-      padding-left: 4rem;
-    }
-  }
-
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    margin-right: auto;
-    margin-left: auto;
   }
 
   > hr {
