--- a/assets/styles/parts/_sandbox.scss
+++ b/assets/styles/parts/_sandbox.scss
@@ -1,5 +1,6 @@
 .sandbox {
   position: relative;
+  margin-bottom: 2rem;
   padding: 2rem;
   border: .15rem solid $grey-100; // same: pre bgColor
   background: #fff;
