--- a/assets/styles/parts/_mokuji.scss
+++ b/assets/styles/parts/_mokuji.scss
@@ -1,6 +1,6 @@
 .mokuji-container {
   margin: 2rem 0;
-  padding: .25rem 1.5rem;
+  padding: .5rem 1.5rem;
   border-left: 3px solid $blue-100;
 }
 
@@ -8,7 +8,8 @@
   display: block;
   margin-bottom: .5rem;
   color: $font-color-h2;
-  font-size: 1.25rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .mokuji-content {
