--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -1,3 +1,7 @@
+h1, h2, h3, h4, h5, h6 {
+  letter-spacing: .05rem;
+}
+
 h1 {
   margin-top: $font-size-h1;
   margin-bottom: 1.5rem;
@@ -43,6 +47,10 @@ h6 {
 
 p {
   margin-bottom: 2rem;
+  letter-spacing: .03rem;
+  line-height: 1.8;
+  word-break: break-all;
+
   > code {
    margin: 0;
    padding: .2rem 0;
