--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -49,6 +49,7 @@ p {
   margin-bottom: 2rem;
   letter-spacing: .03rem;
   line-height: 1.8;
+  text-align: justify;
   word-break: break-all;
 
   > code {
