fix: 記事内タグのレイアウト修正

--- a/assets/styles/parts/_entry-meta.scss
+++ b/assets/styles/parts/_entry-meta.scss
@@ -55,6 +55,7 @@
   margin-bottom: 1rem;
 
   ul {
+    margin-bottom: 0;
     padding-left: 0;
     font-size: $font-size-xs;
     line-height: 2rem;
