add: utilityクラスの追加

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -14,7 +14,7 @@
 @import "base/global";
 @import "base/type";
 @import "base/grid";
-@import "base/helper";
+@import "base/utility";
 
 // pages
 @import "pages/home";
