fix: iconのline-height

--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -93,6 +93,7 @@
   font-style: normal;
   font-variant: normal;
   font-weight: normal;
+  line-height: 1rem;
   text-align: center;
   text-rendering: optimizeLegibility;
   text-transform: none;
