fix: font style

--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -48,7 +48,7 @@ h6 {
 p {
   margin-bottom: 2rem;
   letter-spacing: .03rem;
-  line-height: 1.8;
+  line-height: 2rem;
   text-align: justify;
   word-break: break-all;
 }
