fix: font style

--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -12,7 +12,7 @@ $fullhd: $widescreen;//1344px;
 // Font
 // -------------------------
 
-$font-family-base:        -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN", YuGoMedium, Meiryo, Emoji, sans-serif !default;
+$font-family-base:        -apple-system-subset, BlinkMacSystemFont, "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", Meiryo, Emoji, sans-serif !default;
 $font-family-monospace:   Consolas, "Liberation Mono", Menlo, Courier, Emoji, monospace !default;
 $font-weight-base:        normal;
 
