--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 Theme Name:         kiku
 Theme URI:          https://github.com/hiro0218/kiku-theme
 Description:        In sophisticated image like a chrysanthemum.
-Version:            1.2.0
+Version:            1.3.0
 Author:             hiro
-Author URI:         http://b.0218.jp/
+Author URI:         https://b.0218.jp/
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
