add: small no-image

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -87,7 +87,7 @@ $entry-thumbnail-size: 5rem;  // 80px;
     width: $entry-thumbnail-size;
     height: $entry-thumbnail-size;
     background: $grey-50 50% no-repeat;
-    background-image: url('../images/no-image.png');
+    background-image: url('../images/no-image-128x128.png');
     background-size: cover;
   }
 }
