--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -20,6 +20,7 @@ html {
   font-size: 100%;
   line-height: $line-height-base;
   font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
+  font-kerning: auto;
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -ms-overflow-style: -ms-autohiding-scrollbar;
