--- a/assets/styles/base/_type.scss
+++ b/assets/styles/base/_type.scss
@@ -56,7 +56,7 @@ p {
 :not(pre) > code {
   margin: 0;
   padding: .2rem 0;
-  border-radius: .15rem;
+  border-radius: $radius-base;
   background: $blue-50;
   color: $blue-400;
   font-size: $font-size-sm;
@@ -72,7 +72,7 @@ p {
 pre {
   margin-bottom: 2rem;
   padding: 2rem;
-  border-radius: ($spacer * .15);
+  border-radius: $radius-base;
   background: $grey-100;
   overflow: auto;
   overflow-wrap: break-word;
