--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -17,7 +17,7 @@
 // Body reset
 html {
   font-family: $font-family-base;
-  font-size: 100%;
+  font-size: $font-size-base;
   line-height: $line-height-base;
   font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
   font-kerning: auto;
@@ -25,15 +25,15 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -ms-overflow-style: -ms-autohiding-scrollbar;
 
-  @include until($tablet) {
   &.nprogress-busy {
     cursor: progress;
   }
 
+  @include from($tablet) {
     font-size: $font-size-sm;
   }
 
-  @include from($widescreen) {
+  @include from($desktop) {
     font-size: $font-size-lg;
   }
 
