--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -56,11 +56,7 @@
 .icon-menu,
 .icon-open_in_new,
 .icon-search,
-.icon-update,
-.icon-twitter,
-.icon-facebook,
-.icon-line,
-.icon-hatena {
+.icon-update {
   width: 1rem;
   height: 1rem;
   color: inherit;
@@ -147,25 +143,5 @@
 .icon-update {
   &::before {
     content: "\e90d";
-  }
-}
-.icon-twitter {
-  &:before {
-    content: "\e90e";
-  }
-}
-.icon-facebook {
-  &:before {
-    content: "\e90f";
-  }
-}
-.icon-line {
-  &:before {
-    content: "\e910";
-  }
-}
-.icon-hatena {
-  &:before {
-    content: "\e911";
   }
 }
