--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -45,16 +45,13 @@
 
 .icon-chevron_left,
 .icon-chevron_right,
-.icon-edit,
 .icon-first_page,
-.icon-folder,
 .icon-home,
 .icon-image,
 .icon-keyboard_arrow_right,
 .icon-last_page,
 .icon-location_on,
-.icon-open_in_new,
-.icon-update {
+.icon-open_in_new {
   width: 1rem;
   height: 1rem;
   color: inherit;
@@ -83,19 +80,9 @@
     content: "\e901";
   }
 }
-.icon-edit {
-  &::before {
-    content: "\e902";
-  }
-}
 .icon-first_page {
   &::before {
     content: "\e903";
-  }
-}
-.icon-folder {
-  &::before {
-    content: "\e904";
   }
 }
 .icon-home {
@@ -126,10 +113,5 @@
 .icon-open_in_new {
   &::before {
     content: "\e90b";
-  }
-}
-.icon-update {
-  &::before {
-    content: "\e90d";
   }
 }
